--- a/css/2048.css
+++ b/css/2048.css
@@ -1,1 +1,97 @@
-
+header{
+	display: block;
+	margin: 0 auto;
+	width: 100%;
+	text-align: center;
+}
+header h2{
+	font-family: arial;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 3px;
+}
+header #newgamebutton{
+	display: block;
+	margin: 2px auto;
+	width: 90px;
+	padding: 5px 5px;
+	background-color: #8f7a66;
+	font-family: arial;
+	color: white;
+	border-radius: 10px;
+	text-decoration: none;
+}
+header #newgamebutton:hover{
+	background-color: #9f8b77;
+}
+header p{
+	font-family: arial;
+	font-size: 20px;
+	margin: 2px auto;
+}
+#grid-container{
+	width: 460px;
+	height: 460px;
+	padding: 20px;
+	margin: 5px auto;
+	border-radius: 10px;
+	background-color: #9F8B77;
+	position: relative;
+}
+.grid-cell{
+	width: 100px;
+	height: 100px;
+	border-radius: 6px;
+	background-color: #ccc0b3;
+	position: absolute;
+}
+.number-cell{
+	border-radius: 6px;
+	font-family: arial;
+	font-weight: bold;
+	font-size: 60px;
+	line-height: 100px;
+	position: absolute;
+	text-align: center;
+}
+#gameover {
+    display: block;
+    margin: 5px auto;
+    width: 460px;
+    height: 460px;
+    text-align: center;
+    top: 15px;
+	z-index:9999;
+    position: absolute;
+}
+#gameover p {
+    font-family: Arial;
+    font-size: 50px;
+    color: white;
+    margin: 25px auto
+    margin-top: 40px;
+}
+#scor{
+	font-size: 35px;
+}
+#gameover span {
+    font-family: Arial;
+    font-size: 50px;
+    color: white;
+    margin: 10px auto;
+}
+#restartgamebutton {
+    display: block;
+    margin: 90px auto;
+    width: 100px;
+    padding: 10px 10px;
+    background-color: #8f7a66;
+    font-family: Arial;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+}
+#restartgamebutton:hover {
+    background-color: #9f8b77;
+}
